kubernetes/apps/mautrix-telegram/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mautrix-telegram-ingress
spec:
  entryPoints:
    - websecure
  ingressClassName: traefik-internal
  routes:
    - match: Host(`mautrix-telegram.home.lungoo.de`)
      kind: Rule
      services:
        - name: mautrix-telegram
          port: 29317
